# syn-state-machine

./: Cargo.toml  cspell.json
src/: common_tokens.rs  impls.rs  internals.rs  lib.rs  materialize.rs  print_macro.rs  rust.rs  type_atoms.rs
src/common_tokens/: associate_items.rs  attr.rs  bounds.rs  constant_items.rs  enumerations.rs  expr.rs  extern_crate.rs  external_blocks.rs  function_pointer_types.rs  functions.rs  generic_args.rs  genetic_params.rs  identifier.rs  impl_dyn_trait.rs  implementations.rs  items.rs  keyword.rs  lifetime.rs  macro_invocation.rs  macro_rules.rs  modules.rs  path.rs  patterns.rs  static_items.rs  structs.rs  traits.rs  type_alias.rs  types.rs  unions.rs  use_declarations.rs  visibility.rs  where_clause.rs
src/common_tokens/path/: expressions.rs  qualified.rs  simple.rs  types.rs
src/common_tokens/patterns/: range_patterns.rs
src/common_tokens/snapshots/: syn_state_machine__common_tokens__attr__tests__it_matches_simple_function.snap  syn_state_machine__common_tokens__bounds__tests__it_matches_bound_path.snap  (+74 more)
src/impls/: and_not.rs  box.rs  flat_either.rs  grouping.rs  ident.rs  infallible.rs  interlace.rs  literal.rs  map.rs  option.rs  punct.rs  sum.rs  terminate.rs  token_tree.rs  tuple.rs  typed_literal.rs  vec.rs  with_min_length.rs
src/impls/tuple/: trivial.rs
src/internals/: buffer.rs  cursor.rs  error.rs
src/rust/: atoms.rs  attributes.rs  items.rs  lexical_structure.rs  macros.rs  names.rs  patterns.rs  type_system.rs
src/rust/atoms/: cursor.rs  (+3 more)
src/type_atoms/: adt.rs  proc_macro_items.rs  typed_literals.rs
(+423 files in other folders)
