[package]
name = "syn-state-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
execution-debug = []

[dependencies]
proc-macro2 = "1"
thiserror = "1"
quote = "1"
litrs = "0.4"
insta = "1.29.0"

