[package]
name = "syn-state-machine"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
materialize = []
adt = ["dep:paste"]
typed-lits = ["dep:litrs"]
rust-atoms = ["adt", "materialize", "typed-lits", "dep:proc-macro2"]
rust = ["rust-atoms"]
default = ["rust"]

[dependencies]
proc-macro2 = { version = "1",   optional = true }
litrs       = { version = "0.4", optional = true }
paste       = { version = "1",   optional = true }

[dev-dependencies]
insta = "1"
quote = "1"

